feature(staticfiles): Fixed a issued on routes, support to mime image/png, text/javascript added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <p>Hello, World!</p>
     <a href="sobre.html">Sobre</a>
-    
+    <script src="script.js"></script>
 </body>
 </html>
